# geth

./: .gitignore  Cargo.toml  Makefile  README.md  notes.md
.cargo/: config
.github/workflows/: release.yaml
apps/agent/: Cargo.toml  Makefile  config.toml
apps/agent/resources/: gethd.service
apps/agent/scripts/: install.sh  reset.sh  setup.sh
apps/agent/src/: main.rs
apps/agent/src/config/: mod.rs
apps/agent/src/server/: http.rs  mod.rs  plugin.rs  server.rs
apps/agent/src/server/auth/: config.rs  controller.rs  exception.rs  layer.rs  plugin.rs  service.rs
apps/agent/src/server/operation/: container.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  overview.rs  swap.rs  system.rs  volume.rs
apps/agent/src/stats/: controller.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  system.rs  util.rs
apps/control/: Cargo.toml  Makefile
apps/control/src/: main.rs
apps/control/src/config/: mod.rs
apps/control/src/controller/: agent.rs
apps/control/src/model/: machine.rs
apps/control/src/persistence/: machine_repo.rs  mod.rs  repository.rs
apps/control/src/server/: http.rs  mod.rs
apps/control/src/server/operation/: mod.rs  server.rs
apps/control/src/server/operation/group/: create.rs  delete.rs  describe.rs  list.rs  mod.rs
apps/control/src/server/operation/machine/: conversion.rs  describe.rs  list.rs  mod.rs  register.rs  remove.rs  utilization.rs
apps/control/src/service/agent/: mod.rs
apps/frontend/: .gitignore  Cargo.toml  index.html  tailwind.config.js
apps/frontend/src/: main.rs
apps/frontend/src/components/: mod.rs  nav.rs
apps/frontend/src/components/machine/: list_header.rs  machine_list.rs  mod.rs  status_icon.rs  summary_format.rs
apps/frontend/src/components/machine/details/: header.rs  mod.rs  overview.rs  view.rs
apps/frontend/src/pages/: home.rs  machine_detail.rs  machines.rs  mod.rs
models/agent/: build.gradle.kts  smithy-build.json
models/agent/model/: exceptions.smithy  generic.smithy  main.smithy
models/agent/model/operations/: cpu.smithy  disks.smithy  health.smithy  memory.smithy  network-interfaces.smithy  overview.smithy  swap.smithy  system.smithy  volumes.smithy
models/agent/model/operations/container/: container.smithy  get-container.smithy  list-containers.smithy  stream-logs.smithy  stream-stats.smithy
models/common/: exceptions.smithy  generic.smithy  health.smithy
models/control/: smithy-build.json
models/control/model/: main.smithy
models/control/model/operations/: server.smithy
models/control/model/resources/group/: create-group.smithy  delete-group.smithy  describe-group.smithy  group.smithy  list-groups.smithy
models/control/model/resources/machine/: delete-machine.smithy  describe-machine-utilization.smithy  describe-machine.smithy  list-machines.smithy  machine.smithy  register-machine.smithy
models/control/model/resources/machine_old/: delete-machine.smithy  describe-machine-utilization.smithy  describe-machine.smithy  list-machines.smithy  machine.smithy  register-machine.smithy
package/containers/: Cargo.toml
package/containers/src/: common.rs  containers.rs  docker.rs  lib.rs
package/hw-info/: Cargo.toml
package/hw-info/src/: lib.rs
package/hw-info/src/linux/: disk.rs  mod.rs  nic.rs
package/prisma/: Cargo.toml
package/prisma/src/: lib.rs  types.rs
package/smithy-common/: Cargo.toml
package/smithy-common/src/: lib.rs
package/smithy-common/src/plugins/: mod.rs
package/smithy-common/src/plugins/auth/: controller.rs  layer.rs  mod.rs  plugin.rs  service.rs
package/smithy-common/src/plugins/print/: plugin.rs
prisma/: schema.prisma
tools/prisma-cli/: Cargo.toml
