[package]
name = "control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
tower = "0.4.13"
clap = { version = "4.3.3", features = ["derive"] }
hyper = { version = "0.14.26", features = ["server", "client", "http2"] }
# hyper-rustls = { version = "0.23.0", features = ["http2"] }

prisma = { path = "../../package/prisma" }
smithy-common = { path = "../../package/smithy-common" }
geth-agent-client = { path = "../../package/geth-agent-client" }
geth-control-client = { path = "../../package/geth-control-client" }
geth-control-server = { path = "../../package/geth-control-server" }
aws-smithy-http-server = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-http-server/", features = ["request-id"] }
aws-smithy-runtime = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-runtime/" }
aws-smithy-client = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-client/", features = ["rustls"] }
aws-smithy-http = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-http/" }
aws-smithy-types = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-types/" }
pin-project-lite = "0.2.9"
futures-util = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
toml = "0.7.4"
log = "0.4.19"
env_logger = "0.10.0"
async-stream = "0.3.5"
futures = "0.3.28"