[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
cfg-if = "1"
leptos = { version = "0.4", features = ["csr", "nightly"] }
leptos_meta = { version = "0.4", features = ["csr", "nightly"] }
leptos_router = { version = "0.4", features = ["csr", "nightly"] }
log = "0.4"
simple_logger = "4"
tokio = { version = "1.25.0", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }
wasm-bindgen = "=0.2.87"
thiserror = "1.0.38"
tracing = { version = "0.1.37", optional = true }
http = "0.2.8"
itertools = "0.11.0"
leptos_icons = { version = "0.0.15", features = ["macros", "FaServerSolid", "FaBucketSolid", "FaRobotSolid", "FaHardDriveSolid", "FaCircleInfoSolid", "FaGearSolid", "BsCircleFill", "BsCardText", "BsCardList", "BsEthernet", "BiNetworkChartSolid"] }
chrono = "0.4.26"
serde = "1.0.174"
include_dir = "0.7.3"
pulldown-cmark = "0.9.3"
gray_matter = "0.2.6"
geth-control-client = { path = "../../package/geth-control-client",  default-features = false }
