[package]
name = "containers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
futures-util = "0.3.28"
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.19"
chrono = "0.4.26"
