[package]
name = "smithy-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
tower = "0.4.13"
http = "0.2.9"
http-body = "0.4.5"

aws-smithy-http-server = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-http-server/", features = ["request-id"] }
aws-smithy-runtime = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-runtime/" }
aws-smithy-client = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-client/", features = ["rustls"] }
aws-smithy-http = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-http/" }
aws-smithy-types = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-types/" }